Revision history for Perl extension Module::Build.

0.4209 - 

  [ENHANCEMENTS]

  - Use CPAN::Meta::Merge for meta_merge

  - Convert with CPAN::Meta::Convert in meta_add

0.4208 - Mon Aug 18 21:44:38 CEST 2014

  [BUG FIXES]

  - Removed missed references to Module::Build::Version

0.4207 - Sat Aug 16 12:56:59 CEST 2014

  [BUG FIXES]

  - Fix type installdir -> installdirs [Leon Timmermans, Vitaliy Tokarev]

  [DEPRECATIONS]

  - Module::Build::YAML has been removed

  - Module::Build::ModuleInfo has been removed

  - Module::Build::Version has been removed

  - Get rid of "use vars"

  - Added use warnings to all modules

0.4206 - Sat Jul 12 14:03:01 CEST 2014

  [BUG FIXES]

  - Formally declare 5.8 dependency [Karen Etheridge]

  - Fix MBTest to work with new and old versions of Test::Builder [Chad Granum]

  [ENHANCEMENTS]

  - Enable release and author tests during disttest [Leon Timmermans, Alberto Simões]

0.4205 - Sun Feb  9 17:51:22 CET 2014

  [BUG FIXES]

  - FIX license code regression for artistic license [Roy Ivy III, Leon Timmermans]

  - Don't swallow ExtUtils::CBuilder loading errors [Matthew Horsfall, Leon Timmermans]
  
  - Handle testing on cross-compile builds [Brian Fraser]

  - Protect against platforms without getpw{nam,uid} [Brian Fraser]

0.4204 - Fri Jan 10 00:29:31 CET 2014

  [BUG FIXES]

  - Map conflicts back to runtime [Leon Timmermans]

  - Use mod2fname whenever it's available [Leon Timmermans, Brian Fraser]

  - Accept custom entries in meta_merge 1.4

0.4203 - Wed Nov 27 19:09:05 CET 2013

  [BUG FIXES]

  - Map recommends back to runtime recommends [Leon Timmermans]

  - Map restrictive license to restricted in meta 2.0 [Leon Timmermans]

0.4202 - Tue Nov 19 12:48:19 CET 2013

  [BUG FIXES]

  - Don't merge prereqs from meta to mymeta [Leon Timmermans]

0.4201 - Mon Nov 18 23:23:25 CET 2013

  [BUG FIXES]

  - Prefer META.json over META.yml [Leon Timmermans]

0.4200 - Tue Nov 12 12:39:25 CET 2013
